--- a/BaggageAutomation/BaggageAutomation.csproj
+++ b/BaggageAutomation/BaggageAutomation.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
