--- a/BaggageAutomation/BaggageAutomation.csproj
+++ b/BaggageAutomation/BaggageAutomation.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Emgu.CV" Version="4.5.5.4823" />
+    <PackageReference Include="Emgu.CV.runtime.windows" Version="4.5.5.4823" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    <PackageReference Include="ZXing.Net" Version="0.16.8" />
   </ItemGroup>
 
 </Project>
